--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,10 +42,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // MockWebServer
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.2'
+
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.7.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
-    implementation 'com.squareup.okhttp3:okhttp:3.14.7'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.2'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
